# SeeU_Desktop

./: .gitignore  ADVANCED_MCP_IMPLEMENTATION_COMPLETE.md  AGENTS.md  COMPREHENSIVE_FIXES_SUMMARY.md  COPY_BUTTON_FIX_SUMMARY.md  Cargo.toml  Dockerfile.arm64.base  Dockerfile.l420  Dockerfile.uos  Dockerfile.win7  LICENSE  LOCAL_PLUGIN_INSTALLATION_GUIDE.md  MCP_INTEGRATION_FINAL_REPORT.md  MCP_TAB_INTERFACE_ENHANCEMENT.md  README.md  README_SEMANTIC_SEARCH_TEST.md  RMCP_CONNECTION_FIX_REPORT.md  RMCP_INTEGRATION_COMPLETE.md  Review-CheckList.md  Review-Guide.md  Review-Result.csv  Review-Summary.md  SETTINGS_OPTIMIZATION.md  SIYUAN_IMPORT_FIX_SUMMARY.md  build.rs  compatibility_improvements.md  fix_import_document_issue.md  fix_import_errors_2025_06_28.md  fix_sql_execute_error.md  semantic_search.db.wal  semantic_search_config_example.toml  semantic_search_test_guide.md  slide_demo.md  systray.md  test_content.txt  test_embedding_api.py  test_file.md  test_html.html  test_mcp_logging.sh  test_semantic_search.sh  (+4 more)
crates/aiAssist/: Cargo.toml
crates/aiAssist/src/: api.rs  lib.rs  mcp_integration.rs  mcp_tools.rs  models.rs  settings_ui.rs  state.rs  tests.rs  ui.rs
crates/aiAssist/tests/: test_api.rs  test_mcp.rs  test_state.rs  test_tools.rs
crates/egui_ltreeview/: Cargo.toml
crates/egui_ltreeview/examples/: activatable.rs  cull_nodes.rs  default_open.rs  disallow_drag_and_drop.rs  flattened_dirs.rs  large_tree.rs  persistence.rs  select_node.rs  simple.rs
crates/egui_ltreeview/make_table_of_contents/: Cargo.toml
crates/egui_ltreeview/src/: builder.rs  lib.rs  node.rs  state.rs
crates/ibrowser/: Cargo.toml
crates/ibrowser/src/: embedded_webview.rs  lib.rs  native_webview.rs  simple_webview.rs  state.rs  ui.rs  web_renderer.rs  webview.rs
crates/ifile_editor/: Cargo.toml  README.md  test_clean_logs.txt  test_font_consistency.rs
crates/ifile_editor/examples/: file_tree_demo.rs  test_clean_logs.rs  test_font_consistency.rs  test_word_wrap.rs
crates/ifile_editor/src/: lib.rs  state.rs
crates/inote/: Cargo.toml
crates/inote/src/: clipboard.rs  db_state.rs  db_storage.rs  db_ui.rs  db_ui_import.rs  document_converter.rs  image_storage.rs  knowledge_graph_integration.rs  knowledge_graph_ui.rs  lib.rs  markdown.rs  mcp_server.rs  mcp_sync.rs  mermaid.rs  migration.rs  note.rs  notebook.rs  notebook_selector.rs  settings_ui.rs  siyuan_import.rs  siyuan_import_test.rs  slide.rs  storage.rs  tag.rs  tree_ui.rs  ui.rs
crates/inote/tests/: knowledge_graph_integration_tests.rs  knowledge_graph_ui_tests.rs  semantic_index_rebuild_integration_test.rs  semantic_search_integration_test.rs  test_markdown_help_button.rs  test_note.rs  test_note_switching.rs  test_notebook.rs  test_slideshow_detection.rs  test_tag_and_utils.rs
crates/isearch/: Cargo.toml  ENHANCED_FEATURES.md  LAYOUT_FIX.md
crates/isearch/examples/: file_type_demo.rs  highlight_demo.rs  search_preview_demo.rs  unicode_boundary_test.rs
crates/isearch/src/: advanced_search.rs  background_indexer.rs  enhanced_watcher.rs  export.rs  file_types.rs  indexer.rs  lib.rs  schema.rs  search_optimizer.rs  settings_ui.rs  ui.rs  utils.rs  watcher.rs
crates/isearch/tests/: enhanced_features_test.rs  test_file_types.rs  test_indexer.rs  test_utils.rs
crates/iterminal/: Cargo.toml  README.md
crates/iterminal/docs/: EXPORT_IMPLEMENTATION.md  EXPORT_USAGE.md  HELP_SYSTEM_IMPLEMENTATION.md  RESTORE_SESSION_KEYBOARD_FIX.md  SESSION_HISTORY.md  UI_FIX_SCROLLAREA_ID.md
crates/iterminal/examples/: clipboard_test.rs  connection_test_demo.rs  debug_connection_test.rs  export_demo.rs  help_system_demo.rs  lazy_init_demo.rs  remote_server_demo.rs  session_history_demo.rs  simple_ssh_test.rs  ssh_alternatives_test.rs  ssh_platform_test.rs  ui_demo.rs
crates/iterminal/src/: command.rs  config.rs  egui_terminal.rs  encryption.rs  export.rs  export_ui.rs  help_content.rs  help_ui.rs  history.rs  lib.rs  native_ssh.rs  remote_server.rs  remote_server_manager.rs  remote_server_ui.rs  session.rs  session_history.rs  session_history_ui.rs  settings_ui.rs  ssh_connection.rs  state.rs  terminal.rs  ui.rs  webssh.rs
crates/iterminal/tests/: export_tests.rs  help_system_tests.rs  integration_test.rs  session_history_tests.rs  test_session_management.rs  test_terminal_config.rs
crates/itools/: Cargo.toml  INTEGRATION_NOTES.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  MCP_INTEGRATION_FIX.md  MCP_UI_IMPROVEMENTS.md  README.md  REAL_RMCP_INTEGRATION.md  batch_export.json
crates/itools/examples/: demo.rs  mcp_demo.rs  mcp_json_examples.json  mcp_settings_demo.rs  test_error_details_ui.rs  test_icon_comparison.rs  test_mcp_enhanced.rs  test_mcp_error_detection.rs  test_mcp_ui_optimizations.rs  test_success_details_ui.rs
crates/itools/src/: lib.rs  roles.rs  settings_ui.rs  state.rs
crates/itools/tests/: integration_test.rs  test_roles_and_state.rs
crates/semantic_search/: Cargo.toml
crates/semantic_search/src/: config.rs  embedding.rs  errors.rs  helix_manager.rs  helix_service.rs  hybrid_search.rs  lib.rs  types.rs
crates/web-view/webview-examples/: Cargo.toml  DEEP_WEBVIEW_REFACTOR.md  EGUI_INTEGRATION_EXAMPLES.md  EGUI_WEBVIEW_EMBEDDING.md  EMBEDDED_WEBVIEW_SOLUTION.md  FINAL_SEGFAULT_SOLUTION.md  FOREIGN_EXCEPTION_ANALYSIS.md  IFRAME_RELOAD_SOLUTION.md  MANUAL_ALIGNMENT_SOLUTION.md  NATIVE_EMBED_OPTIMIZATION.md  SEGFAULT_ANALYSIS_AND_SOLUTION.md  SEGFAULT_RESOLUTION.md  SEGFAULT_VICTORY.md  TROUBLESHOOTING.md  TRUE_EMBEDDING_SOLUTIONS.md  WEBVIEW_ALIGNMENT_SOLUTION.md
crates/zhushoude_duckdb/: BGE_INTEGRATION_SUMMARY.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  README_NLP.md  VECTOR_INDEXING_SUMMARY.md  build.rs  zhushoude.db
crates/zhushoude_duckdb/benches/: nlp_benchmark.rs  search_benchmark.rs
crates/zhushoude_duckdb/docs/: API.md  BGE_IMPLEMENTATION.md  DESIGN_semantic.md  PERFORMANCE.md  vector_indexing_implementation.md
crates/zhushoude_duckdb/examples/: api_demo.rs  basic_usage.rs  bge_demo.rs  simple_test.rs  vector_index_demo.rs
plugins/sdk/rust/: Cargo.toml
(+416 files in other folders)
