[package]
name = "seeu_desktop"
version = "0.2.627"
edition = "2021"
authors = ["SeeU Team C&L"]
description = "A modern desktop application built with Rust, egui and eframe"
default-run = "seeu_desktop"

[[bin]]
name = "seeu_desktop"
path = "src/main.rs"

[dependencies]
# GUI Framework - egui的版本请不要动，0.28.1版本才有IME支持，之后的版本有冲突
egui = { version = "0.28.1", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.28.1", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.28.1", default-features = false }



# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.8"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.10.0"
dirs = "5.0.1"
image = { version = "0.24.7", features = ["jpeg", "png", "gif"] }
anyhow = "1.0.75"

# File dialogs - 移除 rfd 依赖以避免 async-recursion
# rfd = { version = "0.12.0", default-features = false, features = ["xdg-portal"] }

# System information
sysinfo = "0.29.10"

# For markdown rendering
pulldown-cmark = "0.9.3"

# For clipboard support
arboard = "3.2.1"

# For HTML to Markdown conversion
html2md = "0.2.14"

# For file watching
notify = "6.1.1"

# For file indexing
tantivy = "0.19.0"

# For regex and file walking (used in examples)
regex = "1.10.0"
walkdir = "2.4.0"

# Local crates
inote = { path = "crates/inote" }
isearch = { path = "crates/isearch" }
aiAssist = { path = "crates/aiAssist" }
itools = { path = "crates/itools" }
iterminal = { path = "crates/iterminal" }
ifile_editor = { path = "crates/ifile_editor" }






[workspace]
members = [
    "crates/inote",
    "crates/isearch",
    "crates/aiAssist",
    "crates/itools",
    "crates/iterminal",
    "crates/ifile_editor",
    "crates/egui_ltreeview",
    "crates/egui_code_editor",
    "crates/egui_term",
    "crates/alacritty_terminal",
]
exclude = [
    "crates/egui_term/examples/*",
]

[profile.release]
opt-level = 2
debug = false
strip = true
lto = true
codegen-units = 1


