[package]
name = "seeu_desktop"
version = "0.3.712"
edition = "2021"
authors = ["SeeU Team C&L"]
description = "A modern desktop application built with Rust, egui and eframe"
default-run = "seeu_desktop"

[[bin]]
name = "seeu_desktop"
path = "src/main.rs"

[dependencies]
# GUI Framework - egui的版本请不要动，0.28.1版本才有IME支持，之后的版本有冲突
egui = { version = "0.28.1", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.28.1", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.28.1", default-features = false }



# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.8"

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
env_logger = "0.10.0"
dirs = "5.0.1"
image = { version = "0.24.7", features = ["jpeg", "png", "gif"] }
anyhow = "1.0.75"

# File dialogs - 移除 rfd 依赖以避免 async-recursion
# rfd = { version = "0.12.0", default-features = false, features = ["xdg-portal"] }

# System information
sysinfo = "0.29.10"

# For markdown rendering
pulldown-cmark = "0.9.3"

# For clipboard support
arboard = "3.2.1"

# For HTML to Markdown conversion
html2md = "0.2.14"

# For file watching
notify = "6.1.1"

# For file indexing
tantivy = "0.19.0"

# For regex and file walking (used in examples)
regex = "1.10.0"
walkdir = "2.4.0"

# Local crates
inote = { path = "crates/inote" }
isearch = { path = "crates/isearch" }
aiAssist = { path = "crates/aiAssist" }
itools = { path = "crates/itools" }
iterminal = { path = "crates/iterminal" }
ifile_editor = { path = "crates/ifile_editor" }
egui_term = { path = "crates/egui_term" }

# 原生SSH支持
ssh2 = "0.9"
# 网络连接
# tokio = { version = "1.0", features = ["full"] }

# 系统托盘和窗口管理
# tray-icon = "0.14.3"  # 暂时注释掉，使用自定义实现
# winit = "0.29.15"     # 已经通过 eframe 包含

# 平台特定依赖
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libappindicator = "0.9.0"
gtk = "0.18.1"

[target.'cfg(target_os = "macos")'.dependencies]
# cocoa = "0.25.0"
# objc2 = "0.4.1"
# objc2-foundation = "0.2.0"
# objc2-app-kit = "0.2.0"






[workspace]
members = [
    "crates/inote",
    "crates/isearch",
    "crates/aiAssist",
    "crates/itools",
    "crates/iterminal",
    "crates/ifile_editor",
    "crates/egui_ltreeview",
    "crates/egui_code_editor",
    "crates/egui_term",
    "crates/alacritty_terminal", "timezone_test",
]
exclude = [
    "crates/egui_term/examples/*",
]

[profile.release]
opt-level = 2
debug = false
strip = true
lto = true
codegen-units = 1

# Patch for cross-compilation issues
[patch.crates-io]
# Fix crunchy crate cross-compilation issue with path separators
# Use a fork that fixes the path separator issue for cross-compilation
#crunchy = { path = "crates/crunchy" }
#{ git = "https://github.com/est31/crunchy", branch = "fix_cross_compilation" }


