[package]
name = "aiAssist"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "AI assistant module for SeeU Desktop"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
dirs = "5.0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.28"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.49"

# Global state
once_cell = "1.18.0"
