[package]
name = "egui_ltreeview"
version = "0.4.1"
edition = "2021"
authors = ["Leonard Schüngel <schuengel.leonard@gmail.com>"]
license = "MIT"
description = "A tree view widget for egui"
repository = "https://github.com/LennysLounge/egui_ltreeview"
categories = ["gui"]
keywords = ["egui", "gui", "widget", "tree"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]

[dependencies]
egui = { version = "0.28.1" }
indexmap = "2.9.0"
serde = { version = "1", features = ["derive"], optional = true }
make_table_of_contents = { path = "make_table_of_contents" }

[dev-dependencies]
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
persistence = ["serde", "egui/persistence"]

# Profile settings are handled by the workspace root

[[example]]
name = "persistence"
required-features = ["persistence"]
