[package]
name = "inote"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "Note-taking module for SeeU Desktop"

[dependencies]
egui = "0.31.1"
eframe = "0.31.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
dirs = "5.0.1"
pulldown-cmark = "0.9.3"
walkdir = "2.4.0"
rand = "0.8.5"
regex = "1.10.2"

# SQLite dependencies
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"