[package]
name = "inote"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "Note-taking module for SeeU Desktop"

[dependencies]
egui = { version = "0.28.1", default-features = false, features = ["default_fonts"] }
eframe = { version = "0.28.1", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.28.1", features = ["svg"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
dirs = "5.0.1"
pulldown-cmark = "0.9.3"
walkdir = "2.4.0"
rand = "0.8.5"
regex = "1.10.2"
once_cell = "1.19.0"
tokio = { version = "1.32.0", features = ["full"] }

# For clipboard support
arboard = "3.2.1"

# For HTML to Markdown conversion
html2md = "0.2.14"

# SQLite dependencies
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"

# For Mermaid diagram rendering
resvg = "0.37.0"
tiny-skia = "0.11.0"
usvg = "0.37.0"
fontdb = "0.16.0"
md5 = "0.7.0"

# For document conversion
pdf-extract = "0.7.0"
zip = "0.6.6"
quick-xml = "0.31.0"

# For file dialog
rfd = "0.14.1"

# Local crates

[dev-dependencies]
tempfile = "3.8.1"