[package]
name = "iterminal"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "Terminal module for SeeU Desktop - Cross-platform terminal emulator"

[dependencies]
# GUI Framework - using egui through eframe
eframe = { version = "0.28.1", default-features = false, features = ["default_fonts"] }

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# UUID for unique identifiers
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Logging
log = "0.4.20"

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# Configuration
dirs = "5.0.1"

# Terminal emulator
egui_term = { path = "../egui_term" }
alacritty_terminal = { path = "../alacritty_terminal" }

# HTML escaping for export
html-escape = "0.2.13"

# Clipboard support
arboard = "3.2.0"

# Error handling
thiserror = "1.0.50"

# 远程服务器管理相关依赖
# 加密库用于敏感信息保护
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
# 系统密钥环支持
keyring = "2.0"

[dev-dependencies]
env_logger = "0.10"
eframe = "0.28.1"

[[example]]
name = "export_demo"
path = "examples/export_demo.rs"

[[example]]
name = "clipboard_test"
path = "examples/clipboard_test.rs"

[[example]]
name = "session_history_demo"
path = "examples/session_history_demo.rs"

[[example]]
name = "help_system_demo"
path = "examples/help_system_demo.rs"

[[example]]
name = "remote_server_demo"
path = "examples/remote_server_demo.rs"

[[example]]
name = "ui_demo"
path = "examples/ui_demo.rs"

[[example]]
name = "lazy_init_demo"
path = "examples/lazy_init_demo.rs"
