[package]
name = "itools"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "iTools module for SeeU Desktop - AI-powered tools integration via MCP protocol"

[dependencies]
# GUI Framework
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = "0.31.1"

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Serialization for MCP protocol
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# UUID for unique identifiers
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Logging
log = "0.4.20"

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# HTTP client for plugin market
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database for plugin metadata and permissions
rusqlite = { version = "0.29", features = ["bundled"] }

# Security and permissions
oso = "0.27"

# WASM runtime for plugin sandboxing
wasmtime = "13.0"

# JSON-RPC for MCP protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system utilities
dirs = "5.0.1"

# Compression for plugin packages
flate2 = "1.0"
tar = "0.4"

# Logging for examples
env_logger = "0.10"
