[package]
name = "semantic_search"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "Semantic search module with HelixDB integration for SeeU Desktop"

[dependencies]
# 核心依赖
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.74"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
anyhow = "1.0.75"
thiserror = "1.0.50"

# HelixDB
helix-db = "0.1.1"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 配置管理
toml = "0.8.8"
dirs = "5.0.1"

# 缓存
moka = { version = "0.12", features = ["future"] }

# 文件系统
notify = "6.1.1"

# 正则表达式
regex = "1.10.2"

# 本地依赖
inote = { path = "../inote" }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4.3"
tempfile = "3.8.1"
