[package]
name = "zhushoude_duckdb"
version = "0.1.0"
edition = "2021"
authors = ["SeeU Team"]
description = "Embedded DuckDB with Chinese semantic search and graph computing"
license = "MIT"
repository = "https://github.com/c2j/SeeU_Desktop"

[dependencies]
# DuckDB核心
duckdb = { version = "1.3", features = ["bundled"] }

# 中文语义模型
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.21"
hf-hub = "0.4"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 缓存和数据结构
lru = "0.12"
dashmap = "5.5"

# 数值计算
ndarray = "0.15"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志和监控
log = "0.4"
tracing = "0.1"

# 工具
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
regex = "1.10"

[build-dependencies]
# 模型下载 (暂时注释掉)
# hf-hub = "0.4"
# tokio = { version = "1.0", features = ["rt"] }

[dev-dependencies]
# 测试依赖
tokio-test = "0.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "search_benchmark"
harness = false
