[workspace]

[package]
name = "mcp-client-examples"
version = "0.1.5"
edition = "2024"
publish = false

[dependencies]
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.9"
futures = "0.3"
anyhow = "1.0"
url = "2.4"
tower = "0.5"
axum = "0.8"
reqwest = "0.12"

[[example]]
name = "filesystem_comparison"
path = "src/filesystem_comparison.rs"
