[package]
name = "seeu-plugin-sdk"
version = "0.1.0"
edition = "2021"
description = "SeeU Desktop Plugin SDK for Rust"
license = "MIT"
repository = "https://github.com/c2j/SeeU_Desktop"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys"]

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
panic = "abort"
